# Sophia

./: .gitattributes  .gitignore  CONTINUITY_HANDOFF_SOPHIA_2026-04-02.md  CoherenceLattice.lean  PEER_REVIEW_GUIDE.md  ProbeAbs.lean  README.md  RECOVERY_REPORT.md  ScratchDynamics.lean  ScratchGloss.lean  ScratchInterp.lean  ScratchTraj.lean  Start-Sophia.ps1  auth_smoke.txt  docker-compose.konomi_api.yml  lake-manifest.json  lakefile.toml  ledger.jsonl  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs  state.rs
python/: README.md  pyproject.toml
python/experiments/coherence_music/: demo_bhairav.py  demo_bhairav_audit.py  demo_quantum_serial.py  demo_taf.py
python/experiments/konomi_blockarray/: bench_blockarray.py
python/experiments/konomi_cube/: bench_cube.py
python/experiments/konomi_evgpu/: bench_matmul.py
python/experiments/konomi_femto/: bench_async.py
python/experiments/konomi_smoke/: run_smoke.py
python/experiments/tches_ode/: plot_lambdaT.py  plot_sweep.py  run.py  summarize.py  sweep20.py
python/kontainer/logs/: konomi_audit.jsonl
python/sonya_node/: __init__.py  keys.py  runtime.py
python/src/coherence/: __init__.py
python/src/coherence_music/: analyze.py
python/tests/: test_ai_guidance.py  test_attention_updates_grounding_provenance.py  test_audio_coherence.py  test_audit_advisory_only_schemas.py  test_audit_agency_mode_state.py  test_audit_anti_capture.py  test_audit_architecture_evolution_state.py  test_audit_authorship_integrity_state.py  test_audit_background_coherence_state.py  test_audit_cascade_state.py  test_audit_causal_state.py  test_audit_civilization.py  test_audit_civilization_forecast.py  test_audit_civilizational_coherence.py  test_audit_civilizational_delta_state.py  test_audit_civilizational_memory_state.py  test_audit_coherence_gradient_map.py  test_audit_coherence_law.py  test_audit_collaborative_review_state.py  test_audit_commons_participation_state.py  test_audit_commons_sovereignty_state.py  test_audit_conservation.py  test_audit_corridor_confidence.py  test_audit_corridor_confidence_calibrated.py  test_audit_corridor_state.py  test_audit_cultural_transmission.py  test_audit_discovery_corridor_state.py  test_audit_discovery_corridors.py  test_audit_discovery_navigation_state.py  test_audit_emergent_domain_state.py  test_audit_epistemic_attractor_state.py  test_audit_epochal_surface_state.py  test_audit_epochal_terrace_state.py  test_audit_evidence_authority_state.py  test_audit_experimental_state.py  test_audit_federated_governance_state.py  test_audit_global_coherence_field.py  test_audit_governance_phase_diagram.py  test_audit_governance_projection.py  test_audit_governance_stability.py  (+86 more)
python/tools/: compare_runs.py  requirements-telemetry.txt  run_wrapper.py  telemetry_music_bridge.py  validate_run.py  validate_taxonomy.py
sophia-core/: README.md  pyproject.toml
sophia-core/config/: audit_config.json  repair_targets.json
(+1302 files in other folders)
