[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coherence-sim"
version = "0.1.0"
description = "Simulation harness for the Coherence Lattice (mirrors Lean definitions)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "numpy>=1.24","pytest>=7", "hypothesis>=6"]
viz = ["matplotlib>=3.8"]
experiments = [
  "numpy>=1.24",
  "matplotlib>=3.8",
  "torch>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
