[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophia-core"
version = "0.1.0"
description = "Sophia cognition scaffolding: TEL hooks and baseline audit integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
