[package]
name = "sophia_terminal"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sha2 = "0.10"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
